--- a/index.html
+++ b/index.html
@@ -32,28 +32,28 @@
         <h2>Ofertas Destacadas</h2>
         <div class="product-grid">
             <div class="product-card">
-                <img src="https://via.placeholder.com/250x180/FFD700/000000?text=BRAWL+PASS+PLUS" alt="Brawl Pass Plus">
+                <img src="/images/pass.png" alt="Brawl Pass Plus">
                 <h3>Brawl Pass Plus + Bonificaciones</h3>
                 <p class="description">Accede a todas las recompensas del Brawl Pass Plus, además de puntos de bonificación y cosméticos exclusivos.</p>
                 <p class="price">$9.99 USD</p>
                 <button>Comprar Ahora</button>
             </div>
             <div class="product-card">
-                <img src="https://via.placeholder.com/250x180/ADD8E6/000000?text=CAJA+DE+GEMAS" alt="Caja de Gemas">
+                <img src="/images/caja_gemas.png" alt="Caja de Gemas">
                 <h3>Paquete de 1500 Gemas</h3>
                 <p class="description">La mejor oferta para recargar tus gemas y desbloquear todo lo que necesitas.</p>
                 <p class="price">$19.99 USD</p>
                 <button>Comprar Ahora</button>
             </div>
             <div class="product-card">
-                <img src="https://via.placeholder.com/250x180/FF6347/FFFFFF?text=OFERTA+DE+SKIN" alt="Oferta de Skin">
+                <img src="/images/legend.png" alt="Oferta de Skin">
                 <h3>Skin Legendaria Exclusiva</h3>
                 <p class="description">Consigue una skin única que no encontrarás en ningún otro lugar por tiempo limitado.</p>
                 <p class="price">$14.99 USD</p>
                 <button>Comprar Ahora</button>
             </div>
             <div class="product-card">
-                <img src="https://via.placeholder.com/250x180/90EE90/000000?text=PACK+DE+MONEDAS" alt="Pack de Monedas">
+                <img src="/images/monedas.png" alt="Pack de Monedas">
                 <h3>Mega Pack de Monedas</h3>
                 <p class="description">Un impulso masivo para tus recursos con miles de monedas para mejoras y progresar.</p>
                 <p class="price">$4.99 USD</p>
